--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,53 +29,99 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
   equatable: ^2.0.0
-  oktoast: ^3.0.0
+
   #网络请求
   dio: ^4.0.0
-  rxdart: ^0.26.0
+#  rxdart: ^0.26.0
   common_utils: ^2.0.2
   #flustars: ^2.0.1
   sp_util: ^2.0.3
+  #分页
   flutter_swiper: ^1.1.6
+  #网络打开
   url_launcher: ^6.0.3
+  #图片加载-图片选择
   image_picker: ^0.7.4
-  sticky_headers: ^0.2.0
+  #自定义同步
+  flutter_sticky_header: ^0.6.0
   #路由
   fluro: ^2.0.3
+  #右边字母移动
   azlistview: ^1.1.1
+  #键盘
   keyboard_actions: ^3.4.0
   webview_flutter: ^2.0.4
+  #侧滑删除
   flutter_slidable: ^0.6.0
   cached_network_image: ^3.0.0
+  #格式化字符输出
   sprintf: ^6.0.0
   provider: ^5.0.0
-  barcode_scan: ^3.0.1
+  #二维码
+  barcode_scan2: ^4.1.3
 #  flutter_2d_amap:
 #    git:
 #      ref: 323fcf8
 #      url: https://github.com/simplezhli/flutter_2d_amap.git
   #国际化
   intl: ^0.17.0
-  device_info: ^2.0.0
+  #设备信息
+  device_info_plus: ^1.0.1
+  #状态管理
   flutter_bloc: ^7.0.0
   google_fonts: ^2.0.0
-  flow_builder: ^0.0.2
+#  flow_builder: ^0.0.2
   meta: ^1.3.0
-  very_good_analysis: ^2.0.0
-  #本地存储
+  #本地存储package
   shared_preferences: ^2.0.5
   #首屏
   flutter_native_splash: ^1.1.8+4
   flare_splash_screen: ^4.0.0
-  http_certificate_pinning: ^2.0.0
+#  http_certificate_pinning: ^2.0.0
   ##定时器
   timer_count_down: ^2.0.1
   #手机像素适配
   flutter_screenutil: ^5.0.0+2
+  #获取包信息
+  package_info_plus: ^1.0.1
+  #弹窗-中间
+  rflutter_alert: ^2.0.2
+  #弹窗-底部
+  fluttertoast: ^8.0.7
+  #弹窗-自定义
+  oktoast: ^3.0.0
+  #图形进度条
+  percent_indicator: ^3.0.1
+  #列表组显示
+  grouped_list: ^4.0.0
+  #gif 加载
+  flutter_gifimage: ^1.0.1
+  #气泡
+  bubble_tab_indicator: ^0.1.6
+  #下拉
+  flutter_easyrefresh: ^2.2.1
+  quiver: ^3.0.1
+  #权限
+  permission_handler: ^8.0.0+2
+  #云存储
+  firebase_storage: ^8.1.0
+  #本地通知
+  flutter_local_notifications: ^6.0.0
+
+  #滑动图片
+  intro_views_flutter: ^3.1.1
+  carousel_slider: ^3.0.0
+
+  #flutter 版本 兼容
+#  flutter_boost:
+#    git:
+#      url: 'https://github.com/alibaba/flutter_boost.git'
+#      ref: 'v3.0-beta.11'
 
 dev_dependencies:
+  very_good_analysis: ^2.0.0
   flutter_test:
     sdk: flutter
 #  intl_translation: ^0.17.2
