--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
-name: share_dream
+
+name: QiYang
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -31,7 +32,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   flutter_icons: ^1.1.0
-  font_awesome_flutter: ^9.0.0
+  #font_awesome_flutter: ^9.0.0
   equatable: ^2.0.0
 
   #网络请求
@@ -40,12 +41,14 @@ dependencies:
   common_utils: ^2.0.2
   #flustars: ^2.0.1
   sp_util: ^2.0.3
-  #分页
+  #轮播
   flutter_swiper: ^1.1.6
   #网络打开
   url_launcher: ^6.0.3
   #图片加载-图片选择
   image_picker: ^0.7.4
+  #图片缓存
+  extended_image: ^4.1.0
   #自定义同步
   flutter_sticky_header: ^0.6.0
   #路由
@@ -135,6 +138,15 @@ dependencies:
   #数据报表显示
   syncfusion_flutter_charts: ^19.1.66+1
 
+  #下拉刷新
+  pull_to_refresh: ^2.0.0
+
+  #app 版本升级
+  flutter_app_upgrade:
+    git:
+      ref: 323fcf8
+      url: https://github.com/simplezhli/flutter_2d_amap.git
+#    path: /Volumes/extends/work/code/personal/demo/flutter/plugin/flutter-do/flutter_app_upgrade
   #flutter 版本 兼容
 #  flutter_boost:
 #    git:
@@ -167,19 +179,20 @@ flutter:
   assets:
     # assets-generator-begin
     # assets/images/*
+    - assets/images/default_banner.png
     # assets/images/startPage/*
     - assets/images/startPage/default.jpeg
     # assets/images/guidePage/*
-    - assets/images/guidePage/guide_3.webp
-    - assets/images/guidePage/guide_2.webp
     - assets/images/guidePage/guide_1.webp
+    - assets/images/guidePage/guide_2.webp
+    - assets/images/guidePage/guide_3.webp
     # assets/images/nav/*
-    - assets/images/nav/user.svg
-    - assets/images/nav/home.svg
     - assets/images/nav/editSquare.svg
+    - assets/images/nav/home.svg
+    - assets/images/nav/project.svg
     - assets/images/nav/setting.svg
     - assets/images/nav/trend.svg
-    - assets/images/nav/project.svg
+    - assets/images/nav/user.svg
     # assets-generator-end
     - assets/crt/
 
