--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "share_dream",
-    "short_name": "share_dream",
+    "name": "QiYang",
+    "short_name": "QiYang",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
