--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: qi_yang
-description: QiYang APP
+description: qi yang app
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -29,7 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #网络请求
+  dio: ^4.0.1
 
+  # lock 同步存在
+  synchronized: ^3.0.0
+
+  #加载配置文件
+  flutter_config: ^2.0.0
+
+  #本地文件存储
+  shared_preferences: ^2.0.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +48,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_ume: ^0.2.1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_ui: ^0.2.1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_device: ^0.2.1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_perf: ^0.2.1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_show_code: ^0.2.1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_console: ^0.2.1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_dio: ^0.2.0  # 仅支持 null-safety 版本
+
+  #logger - 控制台日志
+  logger: ^1.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
