--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,30 @@ dependencies:
   #获取当前平台信息
   package_info_plus: ^1.3.0
 
+  #图片缓存
+  cached_network_image: ^3.1.0+1
+
+  #权限申请
+  permission_handler: ^8.2.6
+
+  #转圈插件
+  flutter_spinkit: ^5.1.0
+
+  #Toast插件
+  flutter_easyloading: ^3.0.3
+
+  #国际化
+  intl: ^0.17.0
+
+  #数字金额显示
+  decimal: ^1.3.0
+
+  #路由
+  fluro: ^2.0.3
+
+  #ui
+  #flui: ^0.9.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -58,6 +82,8 @@ dev_dependencies:
   flutter_ume_kit_show_code: ^0.2.1  # null-safety 版本: ^0.2.1
   flutter_ume_kit_console: ^0.2.1  # null-safety 版本: ^0.2.1
   flutter_ume_kit_dio: ^0.2.0  # 仅支持 null-safety 版本
+  retrofit_generator: any
+  build_runner: ^2.1.4
 
   #logger - 控制台日志
   logger: ^1.1.0
