--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   #获取当前平台信息
   package_info_plus: ^1.3.0
 
+  #设备信息
+  device_info_plus: ^3.1.1
+
   #图片缓存
   cached_network_image: ^3.1.0+1
 
@@ -73,6 +76,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
+  #屏幕适配
+  flutter_screenutil: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
