新增第三方功能和新增bloc theme + 调整首页 1. 新增极光推送和极光推送配置 2. 调整入口流程 3. 新增theme cubit

--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ API_PEM=
 API_PROXY_ENABLE=false
 
 WEB_VIEW_PAGE="/webView"
+
+#极光推送
+#https://github.com/jpush/jpush-flutter-plugin/blob/master/documents/APIs.md
+JPUSH_DEBUG=true
+JPUSH_PRODUCTION=false
+JPUSH_APPKEY=aff14f03ebde5fa5bd9f7242
+JPUSH_CHANNEL=e67f4ce14836b61f5d91a223
