--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,11 +27,11 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 //https://github.com/ByneappLLC/flutter_config/blob/master/example/android/app/build.gradle
 project.ext.envConfigFiles = [
-        developdebug: ".env.dev",
-        developrelease: ".env.dev",
-        stagingdebug: ".env.staging",
-        stagingrelease: ".env.staging",
-        productiondebug: ".env",
+        developdebug     : ".env.dev",
+        developrelease   : ".env.dev",
+        stagingdebug     : ".env.staging",
+        stagingrelease   : ".env.staging",
+        productiondebug  : ".env",
         productionrelease: ".env",
 ]
 apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
@@ -54,11 +54,22 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.myadream.qiyang.qi_yang"
-        minSdkVersion 16
+        applicationId "com.myadream.QiYang"
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        ndk {
+            //选择要添加的对应 cpu 类型的 .so 库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'x86', 'x86_64', 'mips', 'mips64', 'arm64-v8a'
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME: applicationId,
+                JPUSH_APPKEY : project.env.get("JPUSH_APPKEY"), // NOTE: JPush 上注册的包名对应的 Appkey.
+                JPUSH_CHANNEL: project.env.get("JPUSH_CHANNEL"), //暂时填写默认值即可.
+        ]
     }
 
     buildTypes {
