--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.myadream.qiyang.qi_yang">
+    package="com.myadream.QiYang">
    <application
         android:label="qi_yang"
         android:icon="@mipmap/ic_launcher">
