--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
 
   #bloc
   flutter_bloc: ^7.3.3
+  equatable: ^2.0.3
 
   #布局
   flutter_staggered_grid_view: ^0.4.1
@@ -94,6 +95,10 @@ dependencies:
 
   #h5 链接页面
   url_launcher: ^6.0.12
+
+  #极光推送
+  jpush_flutter: 2.1.4
+
 
 dev_dependencies:
   flutter_test:
