--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,8 @@ dependencies:
   jpush_flutter: 2.1.4
 
 
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -122,6 +124,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+  #首屏
+  flutter_native_splash: ^1.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -164,3 +169,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
