--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 
-name: QiYang
+name: qi_yang
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -30,17 +30,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.4
   flutter_icons: ^1.1.0
   #font_awesome_flutter: ^9.0.0
-  equatable: ^2.0.0
+  equatable: ^2.0.3
 
   # google 统计
   firebase_core: any
-  firebase_analytics: ^8.2.0
+  firebase_analytics: ^9.1.0
 
   #网络请求
-  dio: ^4.0.0
+  dio: ^4.0.4
   #网络缓存
   dio_http_cache: ^0.3.0
   #rxdart: ^0.26.0
@@ -50,14 +50,14 @@ dependencies:
   #轮播
   flutter_swiper: ^1.1.6
   #网络打开
-  url_launcher: ^6.0.3
+  url_launcher: ^6.0.18
   #图片加载-图片选择
-  image_picker: ^0.8.3+2
+  image_picker: ^0.8.4+7
   #图片缓存
-  extended_image: ^4.1.0
-  extended_image_library: ^3.1.0
-  #图片存储
-  image_picker_saver: ^0.3.0
+  extended_image: ^6.0.1
+  extended_image_library: ^3.1.2
+  #图片存储-弃用
+  #image_picker_saver: ^0.3.0
   #自定义同步
   flutter_sticky_header: ^0.6.0
   #路由
@@ -65,17 +65,17 @@ dependencies:
   #右边字母移动
   azlistview: ^1.1.1
   #键盘
-  keyboard_actions: ^3.4.0
-  webview_flutter: ^2.0.4
+  keyboard_actions: ^3.4.6
+  webview_flutter: ^3.0.0
   #侧滑删除
-  flutter_slidable: ^0.6.0
+  flutter_slidable: ^1.2.0
   #缓存网络图片
-  cached_network_image: ^3.0.0
+  cached_network_image: ^3.2.0
   #格式化字符输出
   sprintf: ^6.0.0
-  provider: ^5.0.0
+  provider: ^6.0.2
   #二维码
-  barcode_scan2: ^4.1.3
+  barcode_scan2: ^4.2.0
 #  flutter_2d_amap:
 #    git:
 #      ref: 323fcf8
@@ -83,87 +83,87 @@ dependencies:
   #国际化
   intl: ^0.17.0
   #设备信息
-  device_info_plus: ^2.1.0
+  device_info_plus: ^3.2.1
   #状态管理
-  flutter_bloc: ^7.0.0
-  google_fonts: ^2.0.0
+  flutter_bloc: ^8.0.1
+  google_fonts: ^2.3.1
 #  flow_builder: ^0.0.2
-  meta: ^1.3.0
+  meta: ^1.7.0
   #本地存储package
-  shared_preferences: ^2.0.5
+  shared_preferences: ^2.0.13
   #首屏
-  flutter_native_splash: ^1.1.8+4
+  flutter_native_splash: ^2.0.2
   flare_splash_screen: ^4.0.0
 #  http_certificate_pinning: ^2.0.0
   ##定时器
-  timer_count_down: ^2.0.1
+  timer_count_down: ^2.2.1
   #手机像素适配
-  flutter_screenutil: ^5.0.0+2
+  flutter_screenutil: ^5.1.1
   #获取包信息
-  package_info_plus: ^1.0.1
+  package_info_plus: ^1.3.0
   #弹窗-中间
-  rflutter_alert: ^2.0.2
+  rflutter_alert: ^2.0.4
   #弹窗-底部
-  fluttertoast: ^8.0.7
+  fluttertoast: ^8.0.8
   #弹窗-自定义
-  oktoast: ^3.0.0
+  oktoast: ^3.1.5
   #图形进度条-加载状态
-  percent_indicator: ^3.0.1
+  percent_indicator: ^4.0.0
   #图形进度条
-  sleek_circular_slider: ^2.0.0
+  sleek_circular_slider: ^2.0.1
   #加载状态
-  flutter_spinkit: ^5.0.0
-  flutter_easyloading: ^3.0.0
+  flutter_spinkit: ^5.1.0
+  flutter_easyloading: ^3.0.3
 
   #列表组显示
-  grouped_list: ^4.0.0
+  grouped_list: ^4.2.0
   #列表动态显示
-  auto_animated: ^3.0.0
+  auto_animated: ^3.0.1
 
   #gif 加载
   flutter_gifimage: ^1.0.1
   #svg 加载
-  flutter_svg: ^0.22.0
+  flutter_svg: ^1.0.3
   #头部导航
   bubble_tab_indicator: ^0.1.6
   #底部导航
   convex_bottom_bar: ^3.0.0
   persistent_bottom_nav_bar: ^4.0.2
-  custom_navigation_bar: ^0.8.1
+  custom_navigation_bar: ^0.8.2
   #下拉
   flutter_easyrefresh: ^2.2.1
-  quiver: ^3.0.1
+  quiver: ^3.0.1+1
   #权限
-  permission_handler: ^8.0.0+2
+  permission_handler: ^8.3.0
   #云存储
-  firebase_storage: ^8.1.0
+  firebase_storage: ^10.2.7
   #本地通知
-  flutter_local_notifications: ^8.1.1
+  flutter_local_notifications: ^9.2.0
 
   #滑动图片
-  intro_views_flutter: ^3.1.1
+  intro_views_flutter: ^3.2.0
   carousel_slider: ^4.0.0
 
   #数据报表显示
-  syncfusion_flutter_charts: ^19.1.66+1
+  syncfusion_flutter_charts: ^19.4.50
 
   #下拉刷新
   pull_to_refresh: ^2.0.0
 
   #提示标签
-  badges: ^2.0.1
+  badges: ^2.0.2
 
   #生成二维码
-  qr_flutter: ^4.0.0
+  #qr_flutter: ^4.0.0
 
   #字体动画
   animated_text_kit: ^4.2.1
 
   #markdown
-  flutter_markdown: ^0.6.2
+  flutter_markdown: ^0.6.9
 
   #pdf
-  pdf: ^3.4.2
+  pdf: ^3.7.1
 
   #app 版本升级
 #  flutter_app_upgrade:
@@ -172,22 +172,22 @@ dependencies:
 #      url: https://github.com/QiYangApp/flutter_app_upgrade.git
 
   #极光推送
-  jpush_flutter: ^2.1.5
+  jpush_flutter: ^2.2.2
 
   #分享按钮
   modal_bottom_sheet: ^2.0.0
 
   #bugly
-  flutter_bugly: ^0.3.3
+  flutter_bugly: ^0.4.3
 
   #教程引导
   flutter_intro: ^2.3.1
 
   #颜色选择器
-  flex_color_picker: ^2.1.2
+  flex_color_picker: ^2.2.0
 
   #显示html
-  flutter_html: ^2.1.1
+  #flutter_html: ^2.2.1
 
   #配置文件加载
   flutter_config: ^2.0.0
@@ -199,20 +199,22 @@ dependencies:
 
   #加密
   crypto: ^3.0.1
+  #扫码
+  qr_code_scanner: ^0.6.1
 
 dependency_overrides:
   intl: ^0.17.0
 
 dev_dependencies:
-  very_good_analysis: ^2.0.0
+  very_good_analysis: ^2.4.0
   flutter_test:
     sdk: flutter
-  flutter_ume: ^0.2.0-dev.0
-  flutter_ume_kit_ui: ^0.2.0-dev.0
-  flutter_ume_kit_device: ^0.2.0-dev.0
-  flutter_ume_kit_perf: ^0.2.0-dev.0
-  flutter_ume_kit_show_code: ^0.2.0-dev.0
-  flutter_ume_kit_console: ^0.2.0-dev.0
+  flutter_ume: ^0.3.0+1
+  flutter_ume_kit_ui: ^0.3.0+1
+  flutter_ume_kit_device: ^0.3.0
+  flutter_ume_kit_perf: ^0.3.0
+  flutter_ume_kit_show_code: ^0.3.0
+  flutter_ume_kit_console: ^0.3.0
 #  intl_translation: ^0.17.0
 
 # For information on the generic Dart part of this file, see the
