--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   #网络请求
-  dio: ^4.0.1
+  dio: ^4.0.4
 
   # lock 同步存在
   synchronized: ^3.0.0
@@ -39,19 +39,19 @@ dependencies:
   flutter_config: ^2.0.0
 
   #本地文件存储
-  shared_preferences: ^2.0.8
+  shared_preferences: ^2.0.13
 
   #获取当前平台信息
   package_info_plus: ^1.3.0
 
   #设备信息
-  device_info_plus: ^3.1.1
+  device_info_plus: ^3.2.1
 
   #图片缓存
-  cached_network_image: ^3.1.0+1
+  cached_network_image: ^3.2.0
 
   #权限申请
-#  permission_handler: ^8.2.6
+  permission_handler: ^8.3.0
 
   #转圈插件
   flutter_spinkit: ^5.1.0
@@ -63,41 +63,41 @@ dependencies:
   intl: ^0.17.0
 
   #数字金额显示
-  decimal: ^1.3.0
+  decimal: ^2.1.0
 
   #路由
   fluro: ^2.0.3
 
   #路径获取
-  path_provider: ^2.0.6
+  path_provider: ^2.0.9
   #ui
   #flui: ^0.9.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
 
   #屏幕适配
-  flutter_screenutil: ^5.0.0+2
+  flutter_screenutil: ^5.2.0
 
   #bloc
-  flutter_bloc: ^7.3.3
+  flutter_bloc: ^8.0.1
   equatable: ^2.0.3
 
   #布局
-  flutter_staggered_grid_view: ^0.4.1
+  flutter_staggered_grid_view: ^0.6.1
 
   #底部滑动
   smooth_page_indicator: ^1.0.0+2
 
   #web view
-  webview_flutter: ^2.3.1
+  webview_flutter: ^3.0.0
 
   #h5 链接页面
-  url_launcher: ^6.0.12
+  url_launcher: ^6.0.20
 
   #极光推送
-  jpush_flutter: 2.1.4
+  jpush_flutter: ^2.2.2
 
 
 
@@ -105,15 +105,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_ume: ^0.2.1  # null-safety 版本: ^0.2.1
-  flutter_ume_kit_ui: ^0.2.1  # null-safety 版本: ^0.2.1
-  flutter_ume_kit_device: ^0.2.1  # null-safety 版本: ^0.2.1
-  flutter_ume_kit_perf: ^0.2.1  # null-safety 版本: ^0.2.1
-  flutter_ume_kit_show_code: ^0.2.1  # null-safety 版本: ^0.2.1
-  flutter_ume_kit_console: ^0.2.1  # null-safety 版本: ^0.2.1
-  flutter_ume_kit_dio: ^0.2.0  # 仅支持 null-safety 版本
+  flutter_ume: ^0.3.0+1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_ui: ^0.3.0+1  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_device: ^0.3.0  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_perf: ^0.3.0  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_show_code: ^0.3.0  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_console: ^0.3.0  # null-safety 版本: ^0.2.1
+  flutter_ume_kit_dio: ^0.3.0  # 仅支持 null-safety 版本
   retrofit_generator: any
-  build_runner: ^2.1.4
+  build_runner: ^2.1.7
 
   #logger - 控制台日志
   logger: ^1.1.0
@@ -123,10 +123,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
   #首屏
-  flutter_native_splash: ^1.3.1
+  flutter_native_splash: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
