--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,16 +42,16 @@ dependencies:
   shared_preferences: ^2.0.13
 
   #获取当前平台信息
-  package_info_plus: ^1.3.0
+  package_info_plus: ^1.4.0
 
   #设备信息
-  device_info_plus: ^3.2.1
+  device_info_plus: ^3.2.2
 
   #图片缓存
   cached_network_image: ^3.2.0
 
   #权限申请
-  permission_handler: ^8.3.0
+  permission_handler: ^9.2.0
 
   #转圈插件
   flutter_spinkit: ^5.1.0
@@ -78,7 +78,7 @@ dependencies:
   cupertino_icons: ^1.0.4
 
   #屏幕适配
-  flutter_screenutil: ^5.2.0
+  flutter_screenutil: ^5.3.1
 
   #bloc
   flutter_bloc: ^8.0.1
@@ -91,13 +91,13 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
 
   #web view
-  webview_flutter: ^3.0.0
+  webview_flutter: ^3.0.1
 
   #h5 链接页面
   url_launcher: ^6.0.20
 
   #极光推送
-  jpush_flutter: ^2.2.2
+  jpush_flutter: ^2.2.3
 
 
 
@@ -114,6 +114,7 @@ dev_dependencies:
   flutter_ume_kit_dio: ^0.3.0  # 仅支持 null-safety 版本
   retrofit_generator: any
   build_runner: ^2.1.7
+  json_serializable: any
 
   #logger - 控制台日志
   logger: ^1.1.0
@@ -126,7 +127,7 @@ dev_dependencies:
   flutter_lints: ^1.0.4
 
   #首屏
-  flutter_native_splash: ^2.0.2
+  flutter_native_splash: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
